k8s/carts-java-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/$1"},"name":"carts-java-ingress","namespace":"carts-java"},"spec":{"ingressClassName":"webapprouting.kubernetes.azure.com","rules":[{"http":{"paths":[{"backend":{"service":{"name":"carts-java-service","port":{"number":8081}}},"path":"/java/(.*)","pathType":"ImplementationSpecific"}]}}]}}
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  creationTimestamp: "2024-07-26T15:12:50Z"
  generation: 1
  name: carts-java-ingress
  namespace: carts-java
  resourceVersion: "2497974"
  uid: 64b9e074-71b2-4e0f-917a-911c9a097382
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - http:
      paths:
      - backend:
          service:
            name: carts-java-service
            port:
              number: 8081
        path: /java/(.*)
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - ip: 4.182.17.106
