k8s/ingress-java.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: carts-java-ingress
  namespace: carts-java
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - http:
      paths:
      - backend:
          service:
            name: carts-java-service
            port:
              number: 8081
        path: /java/(.*)
        pathType: ImplementationSpecific
